# ticketchain-mvp-v4

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc.json  .solhint.json  README-stage2.md  README.md  docker-compose.yml  hardhat.config.js  mypy.ini  package-lock.json  package.json  pyproject.toml  ticketchain-blockchain
.cursor/rules/: api-design.mdc  architecture-and-design.mdc  ci.mdc  comment-and-docstrings.mdc  containerization-and-docker.mdc  databases-data-storage.mdc  directory-sturcture.mdc  documentation-and-knowledge-sharing.mdc  dry.mdc  fastapi.mdc  git-branching-and-commits.mdc  golang.mdc  grpc.mdc  hardhat.mdc  linting-formatting-and-type.checking.mdc  polygon-amoy.mdc  project-familiarity-and-avoiding-duplications.mdc  solidity-and-smart-contracts.mdc  testing.mdc
.github/workflows/: ci.yml
artifacts/: .gitkeep
contracts/: Lock.sol  Ticket.sol
data/: deployment.json  ticket_registry.json
docs/: COMMANDS.md  CONTAINERIZED_DEPLOYMENT.md  INTEGRATION_TESTING.md  PROJECT_STATUS.md  STAGE_1_SCAFFOLDING.md  TECH_STACK.md  guides_combined.md  high-level-implementation-plan.md  open-ticketing-ecosystem-analysis.txt  open-ticketing-ecosystem-apis.txt  open-ticketing-ecosystem-guides.txt
docs/OPEN_ticketing_ecosystem_context/: OPEN-ticketing-ecosystem-analysis.txt  OPEN_apis.md
infra/docker/: Dockerfile.api  (+1 more)
scripts/: _common.sh  deploy.js  health_checks.sh  run_integration_tests.sh  setup_dev.js  test_ci_locally.sh  test_containerized_setup.sh  test_e2e.py
src/: config.py
test/: Lock.test.js  Ticket.test.js
tests/: conftest.py
(+18 files in other folders)
